"modified clases"